--- a/src/config/Config.h.in
+++ b/src/config/Config.h.in
@@ -1,12 +1,12 @@
 #pragma once
 
-#define PUZZLEMAKER_CE_PROJECT_NAME                   "@PROJECT_NAME@"
-#define PUZZLEMAKER_CE_PROJECT_NAME_PRETTY            "@PROJECT_NAME_PRETTY@"
-#define PUZZLEMAKER_CE_PROJECT_VERSION                "@PROJECT_VERSION@"
-#define PUZZLEMAKER_CE_PROJECT_ORGANIZATION_NAME      "@PROJECT_ORGANIZATION_NAME@"
-#define PUZZLEMAKER_CE_PROJECT_HOMEPAGE               "@PROJECT_HOMEPAGE_URL@"
-#define PUZZLEMAKER_CE_PROJECT_HOMEPAGE_API           "@PROJECT_HOMEPAGE_URL_API@"
-#define PUZZLEMAKER_CE_PROJECT_CHAMBER_SAVE_NAME      "@PROJECT_CHAMBER_SAVE_NAME@"
-#define PUZZLEMAKER_CE_PROJECT_CHAMBER_SAVE_EXTENSION "@PROJECT_CHAMBER_SAVE_EXTENSION@"
+#define PUZZLEMAKER_CE_PROJECT_NAME                   "${PROJECT_NAME}"
+#define PUZZLEMAKER_CE_PROJECT_NAME_PRETTY            "${PROJECT_NAME_PRETTY}"
+#define PUZZLEMAKER_CE_PROJECT_VERSION                "${PROJECT_VERSION}"
+#define PUZZLEMAKER_CE_PROJECT_ORGANIZATION_NAME      "${PROJECT_ORGANIZATION_NAME}"
+#define PUZZLEMAKER_CE_PROJECT_HOMEPAGE               "${PROJECT_HOMEPAGE_URL}"
+#define PUZZLEMAKER_CE_PROJECT_HOMEPAGE_API           "${PROJECT_HOMEPAGE_URL_API}"
+#define PUZZLEMAKER_CE_PROJECT_CHAMBER_SAVE_NAME      "${PROJECT_CHAMBER_SAVE_NAME}"
+#define PUZZLEMAKER_CE_PROJECT_CHAMBER_SAVE_EXTENSION "${PROJECT_CHAMBER_SAVE_EXTENSION}"
 
 #define PUZZLEMAKER_CE_FULL_TITLE PUZZLEMAKER_CE_PROJECT_NAME_PRETTY " v" PUZZLEMAKER_CE_PROJECT_VERSION
