fix: remove last vestige of vpkedit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -269,7 +269,7 @@ elseif(UNIX)
             DESTINATION "/usr/share/pixmaps/")
 endif()
 
-if(VPKEDIT_BUILD_INSTALLER)
+if(PUZZLEMAKER_CE_BUILD_INSTALLER)
     set(CPACK_PACKAGE_NAME ${PROJECT_NAME_PRETTY})
     set(CPACK_PACKAGE_VENDOR ${PROJECT_ORGANIZATION_NAME})
     set(CPACK_PACKAGE_CONTACT "lauralewisdev@gmail.com")
