--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
 # sourcepp
-set(SOURCEPP_USE_DMXPP OFF CACHE BOOL "" FORCE)
-set(SOURCEPP_USE_FGDPP OFF CACHE BOOL "" FORCE)
-set(SOURCEPP_USE_VMFPP OFF CACHE BOOL "" FORCE)
+set(SOURCEPP_USE_DMXPP  OFF CACHE BOOL "" FORCE)
+set(SOURCEPP_USE_FGDPP  OFF CACHE BOOL "" FORCE)
+set(SOURCEPP_USE_VICEPP OFF CACHE BOOL "" FORCE)
+set(SOURCEPP_USE_VMFPP  OFF CACHE BOOL "" FORCE)
 add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/thirdparty/sourcepp")
 
 # Qt
