--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
 
 # Create project
 project(puzzlemaker_ce
-        DESCRIPTION "An upgraded open source puzzlemaker, for the community"
+        DESCRIPTION "An upgraded open source puzzlemaker, for the community."
         VERSION 0.1.0
         HOMEPAGE_URL "https://github.com/craftablescience/puzzlemaker_ce")
 set(CMAKE_CXX_STANDARD 23)
